test_files/syntax_errors/invalid_class_signature.java
public class Factorial{
    public static void main(String[] a){
    {}//Needed
    }
}

class Element = hocusPocus {
    public boolean Init(){
        Age = v_Age ;
        return true;
    }

}
